Added home and study pages

--- a/front/src/layout/Header/Header.module.scss
+++ b/front/src/layout/Header/Header.module.scss
@@ -7,3 +7,17 @@
   margin: auto auto;
   position: absolute;
 }
+
+.logo {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.navBar {
+  background-color: #949bbe;
+  border-radius: 5px 5px 10px 10px;
+}
+
+.navButtons {
+  margin-right: 30px;
+}
