--- a/front/src/App.module.scss
+++ b/front/src/App.module.scss
@@ -1,16 +1,18 @@
 .app {
   text-align: center;
-  background-color: #ffffff;
+  background-color: #9ab2ca;
   width: 100%;
   height: 100vh;
 }
 
 .backFon {
-  background-color: aqua;
+  background-color: #ca9292;
   width: 850px;
   height: 500px;
   position: fixed;
   top: 50%;
   left: 50%;
   margin: -250px 0 0 -425px;
+  border-radius: 10px;
+  border: 4px solid #8f92a4;
 }
