--- a/front/src/index.css
+++ b/front/src/index.css
@@ -67,6 +67,11 @@ input::-ms-clear {
 }
 
 button {
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
   cursor: pointer;
 }
 
