--- a/front/src/components/LearningСard/LearningСard.module.scss
+++ b/front/src/components/LearningСard/LearningСard.module.scss
@@ -1,36 +1,33 @@
 .card {
-  background-color: #cfc65e;
-  height: 330px;
-  width: 25%;
-  margin-top: 20px;
-  border-radius: 25px;
+  height: 150px;
+  width: 18rem;
+  border-color: #7d83d6 !important;
+  background-color: #ff000000 !important;
   transition: 0.5s;
 
   &:hover {
-    height: 350px;
-    width: 30%;
+    height: 170px;
+    width: 20rem;
+    background-color: #7d83d61a !important;
     transition: 0.5s;
   }
 }
 
-.title {
-  font-weight: 400;
-  margin-top: -150px;
-  margin-bottom: 0;
-  color: #694441;
-  user-select: none;
+.link {
+  color: #2e2e2e;
+  text-decoration: none;
+  &:hover {
+    color: #472f76;
+  }
 }
 
-.buttonField {
-  box-sizing: border-box;
-  border-radius: 20px;
-  border: 5px solid #949bbe;
-  width: 100%;
-  height: 100%;
-  transition: 0.5s;
-  &:hover {
-    transition: 0.5s;
-    background-color: #efe787;
-    border: 5px solid #ced7ff;
-  }
+.header {
+  font-size: 20px;
+  font-weight: 500;
+  padding: 0 !important;
+}
+
+.text {
+  margin-top: 10px;
+  font-size: 17px;
 }
