--- a/front/src/components/AccordionAnswer/AccordionAnswer.module.scss
+++ b/front/src/components/AccordionAnswer/AccordionAnswer.module.scss
@@ -23,6 +23,13 @@
   margin: 0 0 0 20px;
 }
 
+.accordionButtons {
+  display: flex;
+  width: 25%;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .accordionAnswer {
   margin-top: 20px;
   background-color: #fff0;
