--- a/front/src/components/KnowWordsCard/KnowWordsCard.module.scss
+++ b/front/src/components/KnowWordsCard/KnowWordsCard.module.scss
@@ -50,6 +50,18 @@
   font-size: 17px;
 }
 
+.close {
+  position: absolute;
+  background-image: url(../../assets/icon/closeIcon.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 10px;
+  width: 20px;
+  height: 20px;
+  top: 6px;
+  right: 5px;
+}
+
 .study {
   margin-top: 45px;
 }
